--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "recharts": "^1.0.0-alpha.4"
   }
 }
